--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -70,7 +70,7 @@
   & .nav__dropdown {
     height: 0;
     opacity: 0;
-    overflow: hidden;
+    // overflow: hidden;
     transition: height 0.3s ease, opacity 0.5s ease;
     flex-direction: column;
     position: absolute;
